🧊 10.22: зацеп — управление по-новому, скольжение с торможением и без киков
Управление: ПКМ — зацеп и скольжение; присед на твёрдом блоке — стоп (на мягком
не работает); пробел на зажатом приседе — прыжок силой обычного прыжка; прыжок
с пола с зажатым приседом у стены цепляется сам (апогеем, без проверки высоты).

Скольжение: скорость гаснет к «ползущей» скорости блока, которая зависит от
ванильной прочности (песок 0.51, камень 0.43, руда 0.31, обсидиан 0.05), поэтому
мягкое и твёрдое скользят по-разному и никто не замирает в воздухе.

Физика: движение только через setVelocity, позиции в PlayerMoveEvent больше не
переписываются — сервер не ругается на движение и не телепортирует игрока; при
нулевой гравитации ванильный кик за полёт невозможен (getMaximumFlyingTicks = MAX).

Прочность: 4 за прыжок, по 1 за блок быстрого скольжения (per-block в конфиге),
в креативе не тратится вовсе. Описание изморози вернулось к прежнему.

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>